--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,10 @@
 [package]
 name = "keyboard-cleaner-gtk"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["gltchitm <42951031+gltchitm@users.noreply.github.com>"]
 edition = "2021"
 
 [dependencies]
-gio = "0.9.1"
-
-[dependencies.gtk]
-version = "0.9.2"
-features = ["v3_20"]
-
-[dependencies.gdk]
-version = "0.13.2"
-features = ["v3_20"]
+gio = "0.15.11"
+gtk = { version = "0.15.5", features = ["v3_20"] }
+gdk = { version = "0.15.4", features = ["v3_20"] }
